--- a/JegyzoInfo/ClientApp/src/app/components/_core/header/header.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/header/header.component.html
@@ -14,7 +14,7 @@
         </li>
         <li>
           <a href="">
-            Videotár
+            Videotárrr
           </a>
         </li>
         <li>
