--- a/JegyzoInfo/ClientApp/src/app/components/_core/header/header.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/header/header.component.html
@@ -14,7 +14,7 @@
         </li>
         <li>
           <a href="">
-            Videotárrr
+            Videotár
           </a>
         </li>
         <li>
@@ -22,9 +22,14 @@
             Online képzéseink
           </a>
         </li>
-        <li>
+        <li class="loginIcon">
           <a href="">
-            Bejelentkezve
+            <img src="/assets/img/iconUser.svg" alt="">
+          </a>
+        </li>
+        <li class="loginText">
+          <a href="">
+            Bejelentkezés
           </a>
         </li>
       </ul>
