--- a/JegyzoInfo/ClientApp/src/app/components/_core/header/header.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/header/header.component.scss
@@ -5,6 +5,7 @@ nav{
   .container{
     display: flex;
     justify-content: space-around;
+    max-width: 1400px;
     .side{
       display: flex;
       align-items: center;
@@ -13,6 +14,7 @@ nav{
     .leftSide{
       position: relative;
       background-color: $blue;
+      width: 318px;
       padding-left: 30px;
       color: white;
       text-transform: uppercase;
@@ -40,7 +42,16 @@ nav{
       ul.defaultMenu{
         display: flex;
         li{
-          margin-right: 25px;
+          margin: 0 12px;
+          &.loginIcon{
+            margin-top: -2px;
+            background: url("/assets/img/delim.svg") no-repeat left;
+            padding-left: 15px;
+            margin-right: 15px;
+          }
+          &.loginText{
+            margin-left: 0;
+          }
         }
       }
     }
