--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -6,6 +6,6 @@ body{
   font-size: 16px;
   color: #121212;
 }
-a{ color: inherit; }
+a, a:hover, a:visited{ color: inherit; text-decoration: none;}
 h1, h2, h3, ul, p{ padding: 0; margin: 0; }
 ul{ list-style: none; }
