--- a/JegyzoInfo/ClientApp/src/app/components/_core/header/header.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/header/header.component.html
@@ -7,20 +7,23 @@
     </div>
     <div class="side rightSide">
       <ul class="defaultMenu">
-        <li>
+        <li class="on">
           <a href="">
             Tudástár
           </a>
+          <hr/>
         </li>
         <li>
           <a href="">
             Videotár
           </a>
+          <hr/>
         </li>
         <li>
           <a href="">
             Online képzéseink
           </a>
+          <hr/>
         </li>
         <li class="loginIcon">
           <a href="">
@@ -31,6 +34,7 @@
           <a href="">
             Bejelentkezés
           </a>
+          <hr/>
         </li>
       </ul>
     </div>
