--- a/JegyzoInfo/ClientApp/src/app/components/_core/header/header.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/header/header.component.scss
@@ -41,16 +41,29 @@ nav{
     .rightSide{
       ul.defaultMenu{
         display: flex;
+        user-select: none;
         li{
           margin: 0 12px;
           &.loginIcon{
             margin-top: -2px;
-            background: url("/assets/img/delim.svg") no-repeat left;
+            background: url("/assets/img/delim.svg") no-repeat;
+            background-position: 0 3px;
             padding-left: 15px;
             margin-right: 15px;
           }
           &.loginText{
             margin-left: 0;
+          }
+          &.on, &:hover{
+            hr{
+              width: 100%;
+            }
+          }
+          hr{
+            transition: 0.2s linear;
+            width: 0;
+            margin-left: auto;
+            margin-right: auto;
           }
         }
       }
