--- a/JegyzoInfo/ClientApp/src/app/components/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/home/home.component.html
@@ -1,3 +1,42 @@
 <header>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <div class="leftSide">
+          <section>
+            <h1>
+              Online tudástár a jegyzői munka gyakorlati kihívásaihoz igazodva
+            </h1>
+            <ul>
+              <li>
+                Jogalkalmazási ismeretek, útmutatók ügymeneti modellek alapján
+              </li>
+              <li>
+                Közel 300 jegyző véleménye alapján válogatott témák
+              </li>
+              <li>
+                Gyakorlati tudásanyag, melynek elsajátítását tanúsítvánnyal ismerjük el
+              </li>
+              <li>
+                Oktató videók, webináriumok, e-learning rendszerű képzések
+              </li>
+            </ul>
+            <div class="buttWrap">
+              <button class="defaultBlue">
+                Többet szeretnék tudni
+              </button>
+              <button class="defaultBlue">
+                Megnézem a kiemelt témákat
+              </button>
+            </div>
+          </section>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="rightSide">
 
+        </div>
+      </div>
+    </div>
+  </div>
 </header>
