--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -10,3 +10,10 @@ a, a:hover, a:visited{ color: inherit; text-decoration: none;}
 h1, h2, h3, ul, p{ padding: 0; margin: 0; }
 hr{ border: 0; height: 2px; border-radius: 2px; background-color: $blue; margin: 5px 0; width: 100%; }
 ul{ list-style: none; }
+
+button.defaultBlue{
+  padding: 12px 30px;
+  border: 0;
+  background-color: $blue;
+  color: white;
+}
