home header half

--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
@@ -3,9 +3,8 @@
 nav{
   display: flex;
   .container{
-    max-width: 1400px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     .side{
       display: flex;
       align-items: center;
