--- a/JegyzoInfo/ClientApp/src/app/components/home/home.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/home/home.component.scss
@@ -1,5 +1,62 @@
 header{
-  .container{
-    max-width: 1400px;
+  display: flex;
+  .leftSide{
+    position: relative;
+    z-index: 1;
+    color: white;
+    padding: 90px 30px 54px 30px;
+    overflow: visible;
+    &::before{
+      content: "";
+      position: absolute;
+      z-index: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      width: 200%;
+      background-image: url("/assets/img/greekColsBack.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: top;
+    }
+    &::after{
+      content: "";
+      position: absolute;
+      z-index: -1;
+      width: 531px;
+      height: 445px;
+      right: -18px;
+      bottom: -18px;
+      background-image: url("/assets/img/triangleRightBottom.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+    section{
+      position: relative;
+      h1{
+        font-size: 30px;
+        font-weight: 700;
+        line-height: 36.6px;
+      }
+      ul{
+        margin-top: 25px;
+        margin-left: 40px;
+        font-size: 18px;
+        font-weight: 300;
+        li{
+          margin: 14px 0;
+          background-image: url("/assets/img/plecsni.svg");
+          background-repeat: no-repeat;
+          background-position: left center;
+          padding-left: 30px;
+        }
+      }
+      .buttWrap{
+        margin-top: 75px;
+        button{
+          margin-right: 20px;
+        }
+      }
+    }
   }
 }
