--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap');
+
 @import "~bootstrap/scss/bootstrap.scss";
 @import "varsAndMixins.scss";
 
@@ -5,6 +7,7 @@ body{
   font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   color: #121212;
+  min-height: 2500px;
 }
 a, a:hover, a:visited{ color: inherit; text-decoration: none;}
 h1, h2, h3, ul, p{ padding: 0; margin: 0; }
