--- a/JegyzoInfo/ClientApp/src/app/components/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-md-7">
         <div class="leftSide">
           <section>
             <h1>
@@ -32,9 +32,32 @@
           </section>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-5">
         <div class="rightSide">
-
+          <section>
+            <h2>
+              JEGYZŐBLOG
+            </h2>
+            <div class="whiteBack">
+              <h3>
+                Közfoglalkoztatási programok pénzügyi-számviteli dokumentálása
+              </h3>
+              <span class="date">
+                2020-01-08
+              </span>
+              <p>
+                A Magyar Közlöny 222. számában jelent meg a kötelező legkisebb munkabér (minimálbér) és a garantált bérminimum
+                megállapításáról szóló 367/2019 (XII.30.) Korm.rendelet. (http://www.kozlonyok.hu/nkonline/ MKPDF/hiteles/mk19222.pdf)
+                <br/>A Korm.rendeletben foglaltak szerint 2020. január 1-től:
+              </p>
+              <hr/>
+            </div>
+            <div class="buttonWrap">
+              <button class="transparent">
+                Még több cikk
+              </button>
+            </div>
+          </section>
         </div>
       </div>
     </div>
