--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -63,3 +63,12 @@
     </div>
   </div>
 </header>
+
+<div class="topics">
+  <div class="container">
+    <h1>
+      KIEMELT TÉMÁINK
+    </h1>
+    <app-topic></app-topic>
+  </div>
+</div>
