--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -15,6 +15,11 @@ h1, h2, h3, ul, p{ padding: 0; margin: 0; }
 hr{ border: 0; height: 2px; border-radius: 2px; background-color: $blue; margin: 5px 0; width: 100%; }
 ul{ list-style: none; }
 
+h1{
+  font-size: 30px;
+  font-weight: 800;
+}
+
 button{
   padding: 12px 30px;
   font-size: 16px;
