--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -9,6 +9,7 @@ body{
   background-color: #E5E5E5;
   color: $dark;
   min-height: 2500px;
+  background-color: red;
 }
 a, a:hover, a:visited{ color: inherit; text-decoration: none;}
 h1, h2, h3, ul, p{ padding: 0; margin: 0; }
