--- a/JegyzoInfo/ClientApp/src/app/components/topic/topic.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/topic/topic.component.html
@@ -1,1 +1,22 @@
-<p>topic works!</p>
+<div class="topicWrap">
+  <section class="topic new">
+    <h6>
+      Az Önkormányzatok gazdálkodása
+      <!-- <img src="/assets/img/triangleNew.svg" alt=""> -->
+    </h6>
+    <p class="clockIcon">
+      Legutóbb frissítve: 2018.01.21.
+    </p>
+    <ul>
+      <li>
+        A költségvetési rendelet, és az ezzel kapcsolatos kötelező tartalmi elemek, fogalmak.
+      </li>
+      <li>
+        A költségvetés végrehajtása, felelősségi körök, új és régi szabályozások a Mötv.-vel összhangban.
+      </li>
+      <li>
+        Gazdálkodási jogkörök, kötelezettségvállalás, pénzügyi ellenjegyzés és teljesítésigazolás
+      </li>
+    </ul>
+  </section>
+</div>
