--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -42,7 +42,7 @@
               <h3>
                 Közfoglalkoztatási programok pénzügyi-számviteli dokumentálása
               </h3>
-              <span class="date">
+              <span class="clockIcon">
                 2020-01-08
               </span>
               <p>
@@ -69,6 +69,6 @@
     <h1>
       KIEMELT TÉMÁINK
     </h1>
-    <app-topic></app-topic>
+    <app-topics></app-topics>
   </div>
 </div>
