--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -9,7 +9,6 @@ body{
   background-color: #E5E5E5;
   color: $dark;
   min-height: 2500px;
-  background-color: red;
 }
 a, a:hover, a:visited{ color: inherit; text-decoration: none;}
 h1, h2, h3, ul, p{ padding: 0; margin: 0; }
@@ -19,6 +18,11 @@ ul{ list-style: none; }
 h1{
   font-size: 30px;
   font-weight: 800;
+}
+
+h6{
+  font-size: 16px;
+  font-weight: 700;
 }
 
 button{
@@ -33,4 +37,13 @@ button{
     color: $dark;
     border: 1px solid $dark;
   }
+}
+
+.clockIcon{
+  font-size: 14px;
+  display: block;
+  background-image: url("/assets/img/smallClock.svg");
+  background-repeat: no-repeat;
+  background-position: left center;
+  padding-left: 20px;
 }
