--- a/JegyzoInfo/ClientApp/src/app/components/topic/topic.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/topic/topic.component.html
@@ -2,7 +2,6 @@
   <section class="topic new">
     <h6>
       Az Önkormányzatok gazdálkodása
-      <!-- <img src="/assets/img/triangleNew.svg" alt=""> -->
     </h6>
     <p class="clockIcon">
       Legutóbb frissítve: 2018.01.21.
@@ -16,6 +15,62 @@
       </li>
       <li>
         Gazdálkodási jogkörök, kötelezettségvállalás, pénzügyi ellenjegyzés és teljesítésigazolás
+      </li>
+    </ul>
+  </section>
+</div>
+
+<div class="topicWrap">
+  <section class="topic">
+    <h6>
+      Humánerőforrás-gazdálkodás
+    </h6>
+    <p class="clockIcon">
+      Legutóbb frissítve: 2018.01.21.
+    </p>
+    <ul>
+      <li>
+        A vezetés humán erőforrás-gazdálkodással kapcsolatos feladatai (munkaerőigény meghatározása, toborzás, kiválasztás, teljesítményértékelés, stb.)
+      </li>
+      <li>
+        A belső ellenőrzésnek a humán erőforrás kezelés szabályozásával kapcsolatos feladatai (kockázatok feltárása, toborzás és kiválasztás vizsgálata, teljesítményértékelés ellenőrzése, anyagi és erkölcsi ösztönzés vizsgálata, stb.)
+      </li>
+      <li>
+        Gazdálkodási jogkörök, kötelezettségvállalás, pénzügyi ellenjegyzés és teljesítésigazolás
+      </li>
+    </ul>
+  </section>
+</div>
+
+<div class="topicWrap">
+  <section class="topic last">
+    <h6>
+      Humánerőforrás-gazdálkodás
+    </h6>
+    <p class="clockIcon">
+      Legutóbb frissítve: 2018.01.21.
+    </p>
+    <ul>
+      <li>
+        Információs társadalom, a e-közigazgatás meghatározása
+      </li>
+      <li>
+        Adatbázisok a közigazgatásban
+      </li>
+      <li>
+        Szoftverek alkalmazása a közigazgatásban
+      </li>
+      <li>
+        Digitalizáció
+      </li>
+      <li>
+        A döntéstámogatás rendszerei
+      </li>
+      <li>
+        Többcsatornás ügyintézés
+      </li>
+      <li>
+        Ügymenetvizsgálat
       </li>
     </ul>
   </section>
