--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -70,5 +70,10 @@
       KIEMELT TÉMÁINK
     </h1>
     <app-topics></app-topics>
+    <div class="buttonWrap">
+      <button class="hollow">
+        Tovább a tudástár teljes tartalmához
+      </button>
+    </div>
   </div>
 </div>
