--- a/JegyzoInfo/ClientApp/src/app/components/topic/topic.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/topic/topic.component.scss
@@ -3,7 +3,9 @@
   z-index: 1;
   .topic{
     background-color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
     padding: 40px;
+    margin-bottom: 20px;
     p{
       margin-top: 10px;
     }
@@ -16,6 +18,9 @@
         background-position: left center;
         padding-left: 28px;
         margin-bottom: 10px;
+        &:last-child{
+          margin-bottom: 0;
+        }
       }
     }
     &.new{
@@ -38,9 +43,20 @@
         background-size: cover;
         width: 74px;
         height: 70px;
-        left: -10px;
-        top: -2px;
+        left: -17px;
+        top: -13px;
       }
+    }
+    &.last::after{
+      content: "";
+      position: absolute;
+      z-index: -1;
+      background-image: url("/assets/img/triangleLeftBottomSmall.svg");
+      background-size: cover;
+      width: 100px;
+      height: 100px;
+      left: -29px;
+      bottom: -11px;
     }
   }
 }
