--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.scss
@@ -102,4 +102,8 @@ header{
     margin-top: 80px;
     margin-bottom: 30px;
   }
+  .buttonWrap{
+    margin-top: 39px;
+    text-align: center;
+  }
 }
