--- a/JegyzoInfo/ClientApp/src/app/components/videos/videos.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/videos/videos.component.html
@@ -4,22 +4,41 @@
       <h1>
         Videótár
       </h1>
-      <div class="carousel">
-        <div>
-          <div class="carousElement">
-            <iframe width="775" height="436" src="https://www.youtube.com/embed/7_LWsSFfc7k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <ngb-carousel #ngcarousel>
+        <ng-template ngbSlide>
+          <div class="picsum-img-wrapper">
+            <iframe width="775" height="436" src="https://www.youtube.com/embed/fidzLZQyaJE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <div class="carousElement">
-            <iframe width="775" height="436" src="https://www.youtube.com/embed/7_LWsSFfc7k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="carousel-caption">
+            <h4>
+              Dark Matter Particles: Gateway to The Dark Universe
+            </h4>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
           </div>
-          <div class="carousElement">
-            <iframe width="775" height="436" src="https://www.youtube.com/embed/7_LWsSFfc7k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </ng-template>
+        <ng-template ngbSlide>
+          <div class="picsum-img-wrapper">
+            <iframe width="775" height="436" src="https://www.youtube.com/embed/A0G7XKFVO8A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          <div class="carousElement">
-            <iframe width="775" height="436" src="https://www.youtube.com/embed/7_LWsSFfc7k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="carousel-caption">
+            <h4>
+              ZŐD HÁTÉR SE KÖLL |Zögzös Program | Streamer Tutorialos VIDINYÓ | TUF Gaming GeForce RTX™ 3080 |
+            </h4>
+            <!-- <p>Consectetur tortor volutpat pretium.</p> -->
           </div>
-        </div>
-      </div>
+        </ng-template>
+        <ng-template ngbSlide>
+          <div class="picsum-img-wrapper">
+            <iframe width="775" height="436" src="https://www.youtube.com/embed/a7WwrMgGTzo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+          <div class="carousel-caption">
+            <h4>
+              Can a Solid Glass Ball Stop a 50cal?
+            </h4>
+            <!-- <p>Consectetur tortor volutpat pretium.</p> -->
+          </div>
+        </ng-template>
+      </ngb-carousel>
     </div>
   </div>
 </div>
