--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
 
-@import "~bootstrap/scss/bootstrap.scss";
+@import "~bootstrap/dist/css/bootstrap.min.css";
 @import "varsAndMixins.scss";
 
 body{
@@ -18,6 +18,11 @@ ul{ list-style: none; }
 h1{
   font-size: 30px;
   font-weight: 800;
+}
+
+h4{
+  font-size: 22px !important;
+  line-height: 30px !important;
 }
 
 h6{
@@ -54,3 +59,9 @@ button, button:focus{
   background-position: left center;
   padding-left: 20px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
