--- a/JegyzoInfo/ClientApp/src/app/components/videos/videos.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/videos/videos.component.scss
@@ -3,7 +3,7 @@
 .videosWrap::ng-deep{
   .videos{
     padding-top: 78px;
-    padding-bottom: 200px;
+    padding-bottom: 304px;
     position: relative;
     z-index: 0;
     background-color: $dark;
@@ -61,6 +61,16 @@
     }
     .carousel-indicators{
       bottom: -140px;
+      li{
+        width: 10px;
+        height: 10px;
+        border: 1px solid white;
+        background-color: transparent;
+        border-radius: 10px;
+        &.active{
+          background-color: white;
+        }
+      }
     }
   }
 }
