--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -81,3 +81,7 @@
 <div class="videos">
   <app-videos></app-videos>
 </div>
+
+<div class="onlineCourses">
+  <app-online-courses></app-online-courses>
+</div>
