--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.scss
@@ -107,4 +107,13 @@ header{
     margin-bottom: 196px;
     text-align: center;
   }
+
+}
+
+.videos{
+
+}
+
+.onlineCourses{
+  padding: 130px 0;
 }
