--- a/JegyzoInfo/ClientApp/src/app/components/online-courses/online-courses.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/online-courses/online-courses.component.html
@@ -7,7 +7,73 @@
       <ngb-carousel #ngcarousel>
         <ng-template ngbSlide>
           <div class="picsum-img-wrapper">
-            CSecs
+            <div class="courseBox">
+              <div class="side leftSide">
+                <h5>
+                  Önkormányzati adatvédelmi tisztviselő <br/>(DPO) képzés
+                </h5>
+                <div class="infos">
+                  <p>
+                    Képzési idő:
+                  </p>
+                  <p>
+                    40 óra (4x10 óra)
+                  </p>
+                  <p>
+                    Oktatónk:
+                  </p>
+                  <p>
+                    <span class="bold_700">
+                      Dr. Miklós Péter
+                    </span>
+                    <br/>
+                    jogász
+                    <br/>
+                    adatvédelmi szakértő
+                  </p>
+                </div>
+              </div>
+              <div class="side rightSide"></div>
+            </div>
+          </div>
+          <div class="carousel-caption">
+            <div class="buttonWrap">
+              <button class="hollow">
+                Megnézem a részleteket
+              </button>
+            </div>
+          </div>
+        </ng-template>
+        <ng-template ngbSlide>
+          <div class="picsum-img-wrapper">
+            <div class="courseBox">
+              <div class="side leftSide">
+                <h5>
+                  Önkormányzati adatvédelmi tisztviselő <br/>(DPO) képzés
+                </h5>
+                <div class="infos">
+                  <p>
+                    Képzési idő:
+                  </p>
+                  <p>
+                    40 óra (4x10 óra)
+                  </p>
+                  <p>
+                    Oktatónk:
+                  </p>
+                  <p>
+                    <span class="bold_700">
+                      Dr. Miklós Péter
+                    </span>
+                    <br/>
+                    jogász
+                    <br/>
+                    adatvédelmi szakértő
+                  </p>
+                </div>
+              </div>
+              <div class="side rightSide"></div>
+            </div>
           </div>
           <div class="carousel-caption">
             <div class="buttonWrap">
