--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -85,3 +85,7 @@
 <div class="onlineCourses">
   <app-online-courses></app-online-courses>
 </div>
+
+<div class="howItWorks">
+  <app-how-it-works></app-how-it-works>
+</div>
