--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.scss
@@ -116,4 +116,10 @@ header{
 
 .onlineCourses{
   padding: 130px 0;
+  padding-bottom: 220px;
+}
+
+.howItWorks{
+  padding: 82px 0 160px 0;
+  // background-color: white;
 }
