--- a/JegyzoInfo/ClientApp/src/app/components/online-courses/online-courses.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/online-courses/online-courses.component.scss
@@ -3,11 +3,64 @@
 .coursesWrap::ng-deep{
   .courses{
     z-index: 0;
-    text-align: center;
     h1{
       text-transform: uppercase;
       margin-bottom: 35px;
+      text-align: center;
     }
+    .courseBox{
+      display: flex;
+      margin: auto;
+      max-width: 800px;
+      height: 328px;
+      .side{
+        position: relative;
+        &.leftSide{
+          width: 53%;
+          background-color: $blue;
+          color: white;
+          padding: 38px 15px 38px 44px;
+          .infos{
+            margin-top: 30px;
+            display: grid;
+            grid-template-columns: 30% 70%;
+            p{
+              margin-bottom: 20px;
+              margin-right: 20px;
+            }
+          }
+          &::after{
+            content: "";
+            position: absolute;
+            z-index: 5;
+            width: 0;
+            height: 0;
+            right: -100px;
+            bottom: 0;
+            border-bottom: 328px solid $blue;
+            border-right: 100px solid transparent;
+          }
+        }
+        &.rightSide{
+          width: 47%;
+          background-color: white;
+          &::after{
+            content: "";
+            position: absolute;
+            background-image: url("/assets/img/houseFeeling.svg");
+            background-size: 100% auto;
+            background-repeat: no-repeat;
+            background-position: bottom left;
+            z-index: 10;
+            right: 14px;
+            top: 40px;
+            left: -40px;
+            bottom: 0;
+          }
+        }
+      }
+    }
+
     .carousel:focus{
       outline: none;
     }
@@ -25,21 +78,13 @@
       overflow: visible;
     }
     .carousel-caption{
-      bottom: -100px;
-      //transform: translate(0, 50%);
+      bottom: -110px;
     }
     .carousel-indicators{
-      bottom: -140px;
-      li{
-        width: 10px;
-        height: 10px;
-        border: 1px solid white;
-        background-color: transparent;
-        border-radius: 10px;
-        &.active{
-          background-color: white;
-        }
-      }
+      display: none;
+    }
+    .buttonWrap{
+
     }
   }
 }
