--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -6,7 +6,7 @@
 body{
   font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
-  background-color: #E5E5E5;
+  background-color: #E5E5E5 !important;
   color: $dark;
   min-height: 2500px;
 }
@@ -25,9 +25,18 @@ h4{
   line-height: 30px !important;
 }
 
+h5{
+  font-size: 18px !important;
+  font-weight: 700 !important;
+}
+
 h6{
   font-size: 16px !important;
   font-weight: 700 !important;
+}
+
+.bold_700{
+  font-weight: 700;
 }
 
 button, button:focus{
@@ -47,7 +56,7 @@ button, button:focus{
     color: $dark;
     border: 1px solid $dark;
     background-color: transparent;
-    padding: 12px 40px;
+    padding: 10px 40px;
   }
 }
 
