--- a/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.scss
@@ -20,7 +20,7 @@ $solidBorderColor: #A3B2B7;
 }
 
 .process{
-  max-width: 700px;
+  max-width: 1100px;
   margin: auto;
   margin-top: 50px;
   background-color: lightgoldenrodyellow;
@@ -31,6 +31,8 @@ $solidBorderColor: #A3B2B7;
     grid-template-columns: 40fr 20fr 4fr;
     > div.margined{
       margin: 10px 0;
+      background-color: white;
+      text-align: center;
     }
     img{
       max-width: 100%;
@@ -59,19 +61,19 @@ $solidBorderColor: #A3B2B7;
         grid-template-columns: 1fr 1fr;
         > div{
           &:nth-child(1){
-            border-left: 2px solid $solidBorderColor;
-            border-top: 2px solid $solidBorderColor;
+            border-left: 2px dotted $solidBorderColor;
+            border-top: 2px dotted $solidBorderColor;
           }
           &:nth-child(2){
-            border-top: 2px solid $solidBorderColor;
+            border-top: 2px dotted $solidBorderColor;
           }
           &:nth-child(3){
-            border-left: 2px solid $solidBorderColor;
-            border-right: 2px solid $solidBorderColor;
+            border-left: 2px dotted $solidBorderColor;
+            border-right: 2px dotted $solidBorderColor;
           }
           &:nth-child(4){
-            border-top: 2px solid $solidBorderColor;
-            border-bottom: 2px solid transparent;
+            border-top: 2px dotted $solidBorderColor;
+            border-bottom: 2px dotted transparent;
           }
         }
       }
@@ -80,11 +82,11 @@ $solidBorderColor: #A3B2B7;
         grid-template-columns: 1fr;
         > div{
           &:nth-child(1){
-            border-top: 2px solid $solidBorderColor;
+            border-top: 2px dotted $solidBorderColor;
           }
           &:nth-child(2){
-            border-top: 2px solid $solidBorderColor;
-            border-bottom: 2px solid $solidBorderColor;
+            border-top: 2px dotted $solidBorderColor;
+            border-bottom: 2px dotted $solidBorderColor;
           }
         }
       }
@@ -93,19 +95,19 @@ $solidBorderColor: #A3B2B7;
         grid-template-columns: 1fr 1fr;
         > div{
           &:nth-child(1){
-            border-right: 2px solid $solidBorderColor;
-            border-top: 2px solid transparent;
+            border-right: 2px dotted $solidBorderColor;
+            border-top: 2px dotted transparent;
           }
           &:nth-child(2){
-            border-right: 2px solid $solidBorderColor;
+            border-right: 2px dotted $solidBorderColor;
           }
           &:nth-child(3){
-            border-top: 2px solid $solidBorderColor;
-            border-bottom: 2px solid $solidBorderColor;
+            border-top: 2px dotted $solidBorderColor;
+            border-bottom: 2px dotted $solidBorderColor;
           }
           &:nth-child(4){
-            border-right: 2px solid $solidBorderColor;
-            border-bottom: 2px solid $solidBorderColor;
+            border-right: 2px dotted $solidBorderColor;
+            border-bottom: 2px dotted $solidBorderColor;
           }
         }
       }
@@ -117,11 +119,11 @@ $solidBorderColor: #A3B2B7;
     grid-template-columns: 1fr 1fr;
     > div{
       &:nth-child(1){
-        border-left: 2px solid $solidBorderColor;
-        border-right: 2px solid $solidBorderColor;
+        border-left: 2px dotted $solidBorderColor;
+        border-right: 2px dotted $solidBorderColor;
       }
       &:nth-child(2){
-        border-right: 2px solid $solidBorderColor;
+        border-right: 2px dotted $solidBorderColor;
       }
     }
   }
@@ -131,7 +133,7 @@ $solidBorderColor: #A3B2B7;
     grid-template-columns: 1fr;
     div{
       &:first-child{
-        border-bottom: 2px solid $solidBorderColor;
+        border-bottom: 2px dotted $solidBorderColor;
       }
     }
   }
@@ -142,42 +144,42 @@ $solidBorderColor: #A3B2B7;
     &.topRight{
       div{
         &:nth-child(3){
-          border-top: 2px solid $solidBorderColor;
+          border-top: 2px dotted $solidBorderColor;
         }
         &:nth-child(4){
-          border-right: 2px solid $solidBorderColor;
-          border-top: 2px solid $solidBorderColor;
+          border-right: 2px dotted $solidBorderColor;
+          border-top: 2px dotted $solidBorderColor;
         }
       }
     }
     &.middleRight{
       div{
         &:nth-child(2){
-          border-right: 2px solid $solidBorderColor;
+          border-right: 2px dotted $solidBorderColor;
         }
         &:nth-child(3){
-          border-top: 2px solid $solidBorderColor;
-          border-right: 2px solid $solidBorderColor;
+          border-top: 2px dotted $solidBorderColor;
+          border-right: 2px dotted $solidBorderColor;
         }
         &:nth-child(4){
-          border-right: 2px solid $solidBorderColor;
+          border-right: 2px dotted $solidBorderColor;
         }
       }
     }
     &.bottomRight{
       div{
         &:nth-child(1){
-          border-right: 2px solid $solidBorderColor;
+          border-right: 2px dotted $solidBorderColor;
         }
         &:nth-child(2){
-          border-right: 2px solid $solidBorderColor;
+          border-right: 2px dotted $solidBorderColor;
         }
         &:nth-child(3){
-          border-left: 2px solid $solidBorderColor;
-          border-right: 2px solid $solidBorderColor;
+          border-left: 2px dotted $solidBorderColor;
+          border-right: 2px dotted $solidBorderColor;
         }
         &:nth-child(4){
-          border-right: 2px solid $solidBorderColor;
+          border-right: 2px dotted $solidBorderColor;
         }
       }
     }
