--- a/JegyzoInfo/ClientApp/src/app/components/_core/footer/footer.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/footer/footer.component.html
@@ -1,1 +1,49 @@
-<footer>footer works!</footer>
+<footer>
+  <div class="container">
+    <div class="contaInner">
+      <div class="side leftSide">
+        <img src="/assets/img/logoDark.svg" alt="">
+      </div>
+      <div class="side rightSide">
+        <div>
+          <a>
+            <img src="/assets/img/logo-youtube.svg" alt="" />
+          </a>
+          <a>
+            <img src="/assets/img/logo-twitter.svg" alt="" />
+          </a>
+          <a>
+            <img src="/assets/img/logo-facebook.svg" alt="" />
+          </a>
+        </div>
+        <div>
+          <ul>
+            <li>
+              <a href="">
+                Adatvédelem
+              </a>
+            </li>
+            <li>
+              <a href="">
+                Impresszum
+              </a>
+            </li>
+            <li>
+              <a href="">
+                ÁSZF
+              </a>
+            </li>
+            <li>
+              <a href="">
+                Kapcsolat
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <img src="/assets/img/MP_logo 2.svg" alt="" />
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
