--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="side leftSide">
       <a href="/">
-        <img src="/assets/img/Light.svg" alt="">
+        <img src="/assets/img/logoLight.svg" alt="">
       </a>
     </div>
     <div class="side rightSide">
