--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -21,7 +21,7 @@
                 Oktatóvideók, webináriumok, e-learning rendszerű képzések
               </li>
             </ul>
-            <div class="buttWrap">
+            <div class="buttonWrap">
               <button class="defaultBlue">
                 Többet szeretnék tudni
               </button>
