--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
@@ -41,6 +41,7 @@ nav{
       ul.defaultMenu{
         display: flex;
         user-select: none;
+        margin-bottom: 0;
         li{
           margin: 0 12px;
           &.loginIcon{
@@ -61,6 +62,8 @@ nav{
           hr{
             transition: 0.2s linear;
             width: 0;
+            margin-top: 5px;
+            margin-bottom: 5px;
             margin-left: auto;
             margin-right: auto;
           }
