--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.scss
@@ -51,7 +51,7 @@ header{
           padding-left: 30px;
         }
       }
-      .buttWrap{
+      .buttonWrap{
         margin-top: 75px;
         button{
           margin-right: 20px;
@@ -121,5 +121,19 @@ header{
 
 .howItWorks{
   padding: 82px 0 160px 0;
-  // background-color: white;
+}
+
+@media(max-width: 1199px){
+  header{
+    .leftSide{
+      section{
+        .buttonWrap{
+          text-align: center;
+          button{
+            margin-bottom: 30px;
+          }
+        }
+      }
+    }
+  }
 }
