--- a/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.html
@@ -95,5 +95,41 @@
       </div>
 
     </div>
+
+    <div class="process2">
+      <div class="row1">
+        <div class="shadowed">
+          <img src="/assets/pic/howItWorksPic04.png" alt="" />
+        </div>
+      </div>
+      <div class="row2">
+        <div class="side leftSide">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <div class="side middle">
+          <div></div>
+          <div>
+            <div></div>
+            <div></div>
+          </div>
+          <div></div>
+          <div></div>
+          <div>
+            <div></div>
+            <div></div>
+          </div>
+          <div></div>
+        </div>
+        <div class="side rightSide">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
