--- a/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.scss
@@ -20,7 +20,7 @@ $solidBorderColor: #A3B2B7;
 }
 
 .process{
-  max-width: 600px;
+  // max-width: 600px;
   margin: auto;
   margin-top: 50px;
   background-color: lightgoldenrodyellow;
@@ -184,8 +184,76 @@ $solidBorderColor: #A3B2B7;
       }
     }
   }
+}
 
-  .shadowed{
-    box-shadow: 0px 4px 14px #DEE6EA;
+.process2{
+  background-color: lightgoldenrodyellow;
+  padding: 30px;
+  .row1{
+    display: flex;
+    justify-content: center;
   }
+  .row2{
+    height: 83px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    .side{
+      &.leftSide{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        > div{
+          &:nth-child(4){
+            border-left: 2px dotted $solidBorderColor;
+            border-top: 2px dotted $solidBorderColor;
+          }
+        }
+      }
+      &.middle{
+        display: grid;
+        grid-template-columns: 4fr 1fr 4fr;
+        > div{
+          &:nth-child(1){
+            border-right: 2px dotted $solidBorderColor;
+            border-bottom: 2px dotted $solidBorderColor;
+          }
+          &:nth-child(2){
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            > div{
+              &:nth-child(1){
+                border-right: 2px dotted $solidBorderColor;
+              }
+            }
+          }
+          &:nth-child(3){
+            border-left: 2px dotted $solidBorderColor;
+            border-bottom: 2px dotted $solidBorderColor;
+          }
+          &:nth-child(5){
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            > div{
+              &:nth-child(1){
+                border-right: 2px dotted $solidBorderColor;
+              }
+            }
+          }
+        }
+      }
+      &.rightSide{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        > div{
+          &:nth-child(3){
+            border-right: 2px dotted $solidBorderColor;
+            border-top: 2px dotted $solidBorderColor;
+          }
+        }
+      }
+    }
+  }
+}
+
+.shadowed{
+  box-shadow: 0px 4px 14px #DEE6EA;
 }
