--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
@@ -66,6 +66,7 @@ nav{
             margin-bottom: 5px;
             margin-left: auto;
             margin-right: auto;
+            height: 3px;
           }
         }
       }
