--- a/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.html
@@ -131,5 +131,10 @@
         </div>
       </div>
     </div>
+    <div class="buttonWrap">
+      <button class="orange">
+        Érdekel az előfizetés
+      </button>
+    </div>
   </div>
 </div>
