--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -13,7 +13,7 @@ body{
 }
 a, a:hover, a:visited{ color: inherit !important; text-decoration: none !important;}
 h1, h2, h3, ul, p{ padding: 0; margin: 0; }
-hr{ border: 0; height: 2px; border-radius: 2px; background-color: $blue; margin: 5px 0; width: 100%; }
+hr{ border: 0; height: 2px; border-radius: 2px; background-color: $blue; width: 100%; }
 ul{ list-style: none; }
 
 h1{
@@ -41,7 +41,7 @@ h6{
 }
 
 button, button:focus{
-  padding: 12px 30px;
+  padding: 12px 34px;
   font-size: 16px;
   outline: none;
   &.defaultBlue{
@@ -58,6 +58,11 @@ button, button:focus{
     border: 1px solid $dark;
     background-color: transparent;
     padding: 10px 40px;
+  }
+  &.orange{
+    border: 0;
+    background-color: #FA6F3C;
+    color: white;
   }
 }
 
