--- a/JegyzoInfo/ClientApp/src/app/components/videos/videos.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/videos/videos.component.scss
@@ -1,7 +1,6 @@
 @import "../../../varsAndMixins.scss";
 
 .videosWrap::ng-deep{
-  overflow: visible;
   .videos{
     padding-top: 78px;
     padding-bottom: 304px;
@@ -40,6 +39,10 @@
       text-transform: uppercase;
       margin-bottom: 55px;
     }
+    h4{
+      margin-top: 30px;
+      height: 60px;
+    }
     .carousel:focus{
       outline: none;
     }
@@ -54,14 +57,13 @@
       background-image: url("/assets/img/carouselArrowRight.svg");
     }
     .carousel-inner{
-      overflow: visible;
+      // overflow: visible;
     }
     .carousel-caption{
-      bottom: -100px;
-      //transform: translate(0, 50%);
+      // bottom: 40px;
     }
     .carousel-indicators{
-      bottom: -140px;
+      bottom: -60px;
       li{
         width: 10px;
         height: 10px;
