--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
@@ -37,6 +37,11 @@
           <hr/>
         </li>
       </ul>
+      <ul class="mobileMenu">
+        <li>
+          Csecs
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
