--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <div class="side rightSide">
-      <ul class="defaultMenu">
+      <ul class="defaultMenu" [class.opened]="menuIsOpened">
         <li class="on">
           <a href="">
             Tudástár
@@ -38,8 +38,12 @@
         </li>
       </ul>
       <ul class="mobileMenu">
-        <li>
-          Csecs
+        <li (click)="clickSandvichMenu()">
+          <svg viewBox="0 0 100 80" width="40" height="40">
+            <rect width="100" height="12" rx="8"></rect>
+            <rect y="30" width="100" height="12" rx="8"></rect>
+            <rect y="60" width="100" height="12" rx="8"></rect>
+          </svg>
         </li>
       </ul>
     </div>
