--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
     <div class="row">
-      <div class="col-md-7">
+      <div class="col-lg-7">
         <div class="leftSide">
           <section>
             <h1>
@@ -32,7 +32,7 @@
           </section>
         </div>
       </div>
-      <div class="col-md-5">
+      <div class="col-lg-5">
         <div class="rightSide">
           <section>
             <h2>
@@ -86,6 +86,8 @@
   <app-online-courses></app-online-courses>
 </div>
 
+<!--
 <div class="howItWorks">
   <app-how-it-works></app-how-it-works>
 </div>
+ -->
