--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -53,11 +53,13 @@
               <hr/>
             </div>
             <div class="buttonWrap">
-              <button class="transparent">
-                Még több cikk
-              </button>
-            </div>
-          </section>
+                <a routerLink="/cikk">
+                  <button class="transparent">
+                    Még több cikk
+                  </button>
+                </a>
+              </div>
+            </section>
         </div>
       </div>
     </div>
@@ -86,8 +88,6 @@
   <app-online-courses></app-online-courses>
 </div>
 
-<!--
-<div class="howItWorks">
+<!-- <div class="howItWorks">
   <app-how-it-works></app-how-it-works>
-</div>
- -->
+</div> -->
