--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
@@ -90,6 +90,7 @@ nav{
           display: none;
           background-color: $blue;
           color: white;
+          border: 1px solid white;
           &.opened{
             display: block;
           }
