--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.html
@@ -32,6 +32,22 @@
           <img src="/assets/img/iconFacebook.svg" alt="" />
         </div>
       </div>
+      <div class="lead">
+        A munkáltatók jelentős része töri azon a fejét, hogy működési igényeihez igazodóan miként szervezze a munkaidőt, és ezzel szükségszerű összefüggésben hogyan ossza be az alkalmazottaik pihenőidejét. A közelmúlt híradásai ugyan a munkaerő-hiány problémájával vannak tele, de bizony előfordulhat, hogy a munkavállaló alól „fogy el a munka”, vagyis nincs szükség a foglalkoztatott teljes kapacitására.
+      </div>
+      <div class="text">
+        <h4>
+          Ha sok lenne a napi 8 óra (I.) - a részmunkaidő egy különös esete
+        </h4>
+        <p>
+          A részmunkaidő egyik különös esete - ahogyan mondjuk, atipikus munkaviszony - a munkavégzés behívás alapján. A törvényszöveg szerint legfeljebb napi hat óra tartamú részmunkaidőben foglalkoztatott munkavállaló munkaszerződés alapján a munkakörébe tartozó feladatok esedékességéhez igazodva teljesíti munkavégzési kötelezettségét. A munkáltatónak a munkavégzés időpontját legalább három nappal előre közölnie kell a munkavállalóval [Mt. 193. §]
+        </p>
+        <div class="quote">
+          <p>
+            A munkaviszonyt - eltérő megállapodás hiányában - bármely munkáltató vagy a munkavállaló jognyilatkozata megszünteti.
+          </p>
+        </div>
+      </div>
     </article>
   </div>
 </div>
